--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -1,53 +1,31 @@
 # ══════════════════════════════════════════════════════════════════════════════
 # HUGO BLOX CONFIGURATION
 # Schema: hugoblox.com/schema/v2
-# Tutorial: https://docs.hugoblox.com/tutorial/
-# Documentation: https://docs.hugoblox.com/
 # ══════════════════════════════════════════════════════════════════════════════
 hugoblox:
   schema: "2.0"
 
-  # ────────────────────────────────────────────────────────────────────────────
-  # IDENTITY
-  # Site-level branding (for people/profiles, use the author system in content/authors/)
-  # ────────────────────────────────────────────────────────────────────────────
   identity:
-    # Site name - shown in navbar, footer, copyright, and browser title by default
     name: "Das Matas"
     logo:
       path: "media/logo.svg"
       height: 36
-    # Legal entity for copyright notices (defaults to name if not set)
     organization: "Das Matas"
-    # Schema.org type for structured data
-    type: local_business                 # person | organization | local_business
-    # Short tagline displayed on your site
+    type: local_business
     tagline: "Das Matas — Para o Mundo"
-    # Site meta description for search engines and social sharing
     description: "Uma aldeia pequena com gente grande. Histórias da aldeia, padel com orgulho e quilómetros somados em comunidade."
-    # Social accounts (used for meta tags like Twitter Cards)
     social:
       instagram: "das.matas"
 
-      
-  # ────────────────────────────────────────────────────────────────────────────
-  # THEME
-  # Color and visual design system
-  # ────────────────────────────────────────────────────────────────────────────
   theme:
-    # Mode: 'light', 'dark', or 'system' (follows OS preference)
     mode: system
-    # Theme pack: name from data/themes/ or { light: "x", dark: "y" } for mix-and-match
     pack: "minimal"
-    # Optional: Override theme pack colors
     colors:
-      primary: ""                       # Tailwind palette name or hex (e.g., "indigo" or "#6366f1")
+      primary: ""
       secondary: ""
-      neutral: ""                       # Affects gray utilities (text-gray-*, bg-gray-*)
-    # Optional: Mode-specific color overrides
+      neutral: ""
     colors_light: {}
     colors_dark: {}
-    # Optional: Semantic surface color overrides
     surfaces:
       background: ""
       foreground: ""
@@ -58,256 +36,154 @@ hugoblox:
         background: ""
         foreground: ""
 
-  # ────────────────────────────────────────────────────────────────────────────
-  # TYPOGRAPHY
-  # Font and text sizing
-  # ────────────────────────────────────────────────────────────────────────────
   typography:
-    # Font: 'sans' (Inter), 'serif' (Roboto Slab), or 'native' (system fonts)
     font: "sans"
-    # Size: 'sm', 'md', 'lg', or 'xl' (affects base font size and scale)
     size: "md"
 
-  # ────────────────────────────────────────────────────────────────────────────
-  # LAYOUT
-  # Spacing and shape tokens
-  # ────────────────────────────────────────────────────────────────────────────
   layout:
-    # Border radius: 'none', 'sm', 'md', 'lg', or 'full'
     radius: "md"
-    # Spacing density: 'compact', 'comfortable', or 'spacious'
     spacing: "comfortable"
-    # Avatar shape in author profiles
-    avatar_shape: circle                # circle | square | rounded
+    avatar_shape: circle
 
-sharing:
-  enable: false
-
-
-features:
-  share:
+  # ✅ Desliga botões de partilha (X, Facebook, etc.)
+  sharing:
     enable: false
 
-  # ────────────────────────────────────────────────────────────────────────────
-  # HEADER
-  # Site header and navigation bar
-  # ────────────────────────────────────────────────────────────────────────────
+  features:
     header:
       enable: true
-      # Header style variant
-      style: navbar                       # navbar | navbar-simple | minimal
-      # Stick to top on scroll
+      style: navbar
       sticky: true
-      # Menu alignment
-      align: center                       # left | center | right
+      align: center
 
-      # Navbar branding (logo)
       navbar:
         logo:
-          image: "/media/logo_header.svg"        # file in assets/media/
+          image: "/media/logo_header.svg"
           alt: "Das Matas"
-          text: ""                        # optional fallback text
+          text: ""
 
-      # Feature toggles
       search: true
       theme_toggle: true
       theme_picker: false
       language_switcher: false
 
-      # Call-to-action button
       cta:
         enable: false
         text: ""
         url: ""
 
+    footer:
+      style: minimal
+      language_switcher: false
+      text: ""
 
-  # ────────────────────────────────────────────────────────────────────────────
-  # FOOTER
-  # Site footer
-  # ────────────────────────────────────────────────────────────────────────────
-  footer:
-    # Footer style variant
-    style: minimal                      # minimal | columns | centered
-    language_switcher: false
-    # Custom footer text (HTML supported)
-    text: ""
+    copyright:
+      notice: "© {year} {name}. This work is licensed under {license}"
+      license:
+        type: cc
+        allow_derivatives: false
+        share_alike: true
+        allow_commercial: false
 
-  # ────────────────────────────────────────────────────────────────────────────
-  # COPYRIGHT
-  # Legal notices and licensing
-  # ────────────────────────────────────────────────────────────────────────────
-  copyright:
-    # Copyright notice - supports {year}, {name}, {license} placeholders
-    notice: "© {year} {name}. This work is licensed under {license}"
-    license:
-      type: cc                          # cc | custom
-      allow_derivatives: false
-      share_alike: true
-      allow_commercial: false
+    seo:
+      title: ""
+      location:
+        address:
+          street: ""
+          city: ""
+          region: ""
+          postal_code: ""
+          country: ""
+        coordinates:
+          latitude: null
+          longitude: null
+        phone: ""
+      ai:
+        allow:
+          - /
+        disallow: []
+        note: "Guidance for AI crawlers - customize to match your public content."
+        contact: ""
 
-  # ────────────────────────────────────────────────────────────────────────────
-  # SEO
-  # Search engine optimization - overrides and technical settings
-  # ────────────────────────────────────────────────────────────────────────────
-  seo:
-    # Browser tab title override (defaults to identity.name if not set)
-    title: ""
-    # For local_business identity type only
-    location:
-      address:
-        street: ""
-        city: ""
-        region: ""
-        postal_code: ""
-        country: ""
-      coordinates:
-        latitude: null
-        longitude: null
-      phone: ""
-    # AI/LLM crawler guidance (llms.txt)
-    ai:
-      allow:
-        - /
-      disallow: []
-      note: "Guidance for AI crawlers - customize to match your public content."
-      contact: ""
+    content:
+      math:
+        enable: false
+      toc:
+        enable: true
+      reading_time:
+        enable: true
+      citations:
+        style: apa
 
-  # ────────────────────────────────────────────────────────────────────────────
-  # CONTENT
-  # Content rendering and behavior
-  # ────────────────────────────────────────────────────────────────────────────
-  content:
-    # Math rendering
-    math:
+    search:
+      enable: true
+      suggestions: []
+      quick_actions: []
+
+    comments:
       enable: false
-    # Table of contents
-    toc:
-      enable: true
-    # Reading time estimates
-    reading_time:
-      enable: true
-    # Academic citations
-    citations:
-      style: apa                        # apa | mla | chicago | ieee
+      provider: ""
+      giscus:
+        repo: ""
+        repo_id: ""
+        category: ""
+        category_id: ""
+      disqus:
+        shortname: ""
 
-  # ────────────────────────────────────────────────────────────────────────────
-  # SEARCH
-  # Site search
-  # ────────────────────────────────────────────────────────────────────────────
-  search:
-    enable: true
-    # Trending/suggested search terms
-    suggestions: []
-    # Quick action shortcuts in search modal
-    quick_actions: []
+    analytics:
+      google:
+        measurement_id: ""
+      google_tag_manager:
+        container_id: ""
+      plausible:
+        domain: ""
+      fathom:
+        site_id: ""
+      pirsch:
+        site_id: ""
+      clarity:
+        project_id: ""
+      baidu:
+        site_id: ""
 
-  # ────────────────────────────────────────────────────────────────────────────
-  # COMMENTS
-  # User comments system
-  # ────────────────────────────────────────────────────────────────────────────
-  comments:
-    enable: false
-    provider: ""                        # giscus | disqus
-    giscus:
-      repo: ""
-      repo_id: ""
-      category: ""
-      category_id: ""
-    disqus:
-      shortname: ""
+    verification:
+      google: ""
+      bing: ""
+      baidu: ""
+      yandex: ""
+      pinterest: ""
+      naver: ""
 
-  # ────────────────────────────────────────────────────────────────────────────
-  # ANALYTICS
-  # Traffic and behavior analytics
-  # ────────────────────────────────────────────────────────────────────────────
-  analytics:
-    google:
-      measurement_id: ""                # Google Analytics 4: G-XXXXXXXXXX
-    google_tag_manager:
-      container_id: ""                  # GTM-XXXXXXX
-    plausible:
-      domain: ""
-    fathom:
-      site_id: ""
-    pirsch:
-      site_id: ""
-    clarity:
-      project_id: ""
-    baidu:
-      site_id: ""
+    repository:
+      enable: false
+      url: ""
+      branch: main
+      content_dir: content
 
-  # ────────────────────────────────────────────────────────────────────────────
-  # VERIFICATION
-  # Search engine site verification codes
-  # ────────────────────────────────────────────────────────────────────────────
-  verification:
-    google: ""
-    bing: ""
-    baidu: ""
-    yandex: ""
-    pinterest: ""
-    naver: ""
+    locale:
+      date_format: "Jan 2, 2006"
+      time_format: "3:04 PM"
+      address_format: en-us
 
-  # ────────────────────────────────────────────────────────────────────────────
-  # REPOSITORY
-  # Source code repository for "Edit this page" links
-  # ────────────────────────────────────────────────────────────────────────────
-  repository:
-    enable: false
-    url: ""                             # e.g., https://github.com/username/repo
-    branch: main
-    content_dir: content
+    security:
+      csp:
+        policy: ""
+        report_only: false
+      frame_options: sameorigin
+      permissions_policy: ""
 
-  # ────────────────────────────────────────────────────────────────────────────
-  # LOCALE
-  # Regional formatting preferences
-  # ────────────────────────────────────────────────────────────────────────────
-  locale:
-    date_format: "Jan 2, 2006"          # Go time format
-    time_format: "3:04 PM"
-    address_format: en-us
+    privacy:
+      enable: false
+      anonymize_analytics: true
 
-  # ────────────────────────────────────────────────────────────────────────────
-  # SECURITY
-  # Security headers and policies (requires blox-plugin-netlify)
-  # ────────────────────────────────────────────────────────────────────────────
-  security:
-    csp:
-      policy: ""
-      report_only: false
-    frame_options: sameorigin           # deny | sameorigin | allow - sameorigin allows slides embedding
-    permissions_policy: ""
+    debug:
+      enable: false
+      hud:
+        position: bottom-left
+        opacity: 1.0
+      export_logs: true
 
-  # ────────────────────────────────────────────────────────────────────────────
-  # PRIVACY
-  # Privacy and compliance features
-  # ────────────────────────────────────────────────────────────────────────────
-  privacy:
-    enable: false
-    anonymize_analytics: true
-
-  # ────────────────────────────────────────────────────────────────────────────
-  # DEBUG
-  # Development and debugging (hidden in production)
-  # ────────────────────────────────────────────────────────────────────────────
-  debug:
-    enable: false
-    hud:
-      position: bottom-left             # top-left | top-right | bottom-left | bottom-right
-      opacity: 1.0
-    export_logs: true
-
-  # ────────────────────────────────────────────────────────────────────────────
-  # PRO
-  # Pro subscription features and affiliate program
-  # ────────────────────────────────────────────────────────────────────────────
-  pro:
-    # Hide "Powered by HugoBlox" attribution
-    # Requires: Pro subscription to support HugoBlox via alternative means
-    # Note: Even with Pro, you can keep this false to support open source!
-    # Get Pro: https://hugoblox.com/pro
-    hide_attribution: false
-    
-    # Affiliate referral code for rewards program
-    # Join affiliate program: https://hugoblox.com/affiliates
-    affiliate_code: ""
+    pro:
+      hide_attribution: false
+      affiliate_code: ""
